Improve project formatting: shorten descriptions, fix overlap, add subtitle display

--- a/src/static/css/components/_mini-post.scss
+++ b/src/static/css/components/_mini-post.scss
@@ -6,36 +6,17 @@
 
 /* Mini Post */
 .cell-container {
-  position: relative;
-
   .description {
-    position: absolute;
     padding: 0;
-    bottom: 0;
     border-top: solid 1px _palette(border);
 
     p {
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       margin: 0;
       padding: 1.25em;
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #3c3b3b;
-      font-family: "Raleway", Helvetica, sans-serif;
-      z-index: 1000;
-      transition: all 0.1s;
-      -webkit-transition: all 0.1s ease-in-out;
-    }
-
-    p:hover {
-      background-color: rgba(255, 255, 255, 0.9);
-    }
-  }
-
-  @media (max-width: 480px) {
-    .description {
-      position: inherit;
-      padding: 0;
-      bottom: inherit;
+      color: _palette(fg);
+      font-family: "Source Sans Pro", Helvetica, sans-serif;
+      line-height: 1.6;
     }
   }
 }
@@ -67,14 +48,21 @@
   }
 
   header {
-    z-index: 2;
     @include padding(1.25em, 1.25em, (0, 3em, 0, 0));
-    min-height: 4em;
     position: relative;
     @include vendor("flex-grow", "1");
 
     h3 {
-      font-size: 0.7em;
+      font-size: 0.75em;
+      margin-bottom: 0.5em;
+    }
+    
+    .subtitle {
+      font-size: 0.65em;
+      color: _palette(fg-light);
+      font-style: italic;
+      margin-bottom: 0.5em;
+      font-weight: normal;
     }
 
     .published {
@@ -83,8 +71,9 @@
       font-size: 0.6em;
       font-weight: _font(weight-heading);
       letter-spacing: _font(kerning-heading);
-      margin: -0.625em 0 (_size(element-margin) * 0.85) 0;
+      margin: 0.5em 0 0 0;
       text-transform: uppercase;
+      color: _palette(fg-light);
     }
 
     .author {
